# CMakeProject1

./: .gitignore  CMakeLists.txt
Scripts/: FetchLibraries.cmake
Source/: CMakeLists.txt  main.cpp
Source/Renderer/: Renderer.cpp  Renderer.h
Source/Shaders/: PixelShader.hlsl  VertexShader.hlsl
Source/Window/: Window.cpp  Window.h
